@@ -27,8 +27,8 @@ XFillPolygon(Display * display, Drawable d, GC gc,
 		}
 	}
 
-	if (shape == Complex || shape == Convex)
-		printf("XFillPolygon: Complex/Convex\n");
+//	if (shape == Complex || shape == Convex)
+//		printf("XFillPolygon: Complex/Convex\n");
 
 	GrFillPoly(d, gc->gid, npoints, gr_points);
 
