@@ -8,7 +8,8 @@
 #
 
 # set to Microwindows and X11 include and lib directories
-MWIN=/home/greg/net/microwin/src
+MWIN=../microwin/src
+xMWIN=/home/greg/net/microwin/src
 X11=/usr/X11R6
 
 MWIN_INCLUDE=$(MWIN)/include
